--- a/index.html
+++ b/index.html
@@ -329,33 +329,33 @@
 
             </div>
         </section>
+
         <!-- Q&A Session -->
         <section class="my-5">
-            <div class="container">
-                <h1 class="text-center">Frequently Asked Questions</h1>
+            <div class="container mb-5">
+                <h1 class="text-center fs-2 fw-bold">Frequently Asked Questions</h1>
                 <p class="text-center">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
             </div>
-            <div class="container">
+            <div class="container " style="max-width: 872px;">
                 <!-- Accordion -->
-                <div class="accordion" id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item">
+                <div class="accordion " id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item ">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button " type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                 aria-controls="panelsStayOpen-collapseOne">
-                                Accordion Item #1
+                                Difference between Flex and Grid?
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                             aria-labelledby="panelsStayOpen-headingOne">
                             <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>Grid and flexbox.</strong> The basic
+                                difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed
+                                for layout in one dimension - either a row or a column. Grid was designed for
+                                two-dimensional layout - rows, and columns at the same time.
+
                             </div>
                         </div>
                     </div>
@@ -364,18 +364,16 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-                                Accordion Item #2
-                            </button>
+                                Difference between Bootstrap & Tailwind? </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                until the collapse plugin adds the appropriate classes that we use to style each
-                                element. These classes control the overall appearance, as well as the showing and hiding
-                                via CSS transitions. You can modify any of this with custom CSS or overriding our
-                                default variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>Bootstrap VS Tailwind.</strong> Bootstrap comes with a set of
+                                pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind
+                                CSS uses a set of utility classes to create a neat UI with more flexibility and
+                                uniqueness. Sites created using Bootstrap follow the generic pattern that makes them
+                                look identical.
                             </div>
                         </div>
                     </div>
@@ -384,23 +382,71 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseThree">
-                                Accordion Item #3
-                            </button>
+                                What is CSS box Model? </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <strong>This is the third item's accordion body.</strong> It is hidden by default, until
-                                the collapse plugin adds the appropriate classes that we use to style each element.
-                                These classes control the overall appearance, as well as the showing and hiding via CSS
-                                transitions. You can modify any of this with custom CSS or overriding our default
-                                variables. It's also worth noting that just about any HTML can go within the
-                                <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>The CSS Box Model</strong>
+                                In CSS, the term "box model" is used when talking about design and layout. The CSS box
+                                model is essentially a box that wraps around every HTML element. It consists of:
+                                margins, borders, padding, and the actual content.
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFour">
+                                What is a Semantic Tag?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                            aria-labelledby="panelsStayOpen-headingFour">
+                            <div class="accordion-body">
+                                <strong>Semantic Tag.</strong> The HTML semantics refers to
+                                the tags that provide meaning to an HTML page rather than just presentation. It makes
+                                HTML more comprehensible by better defining the different sections and layout of web
+                                pages.
+                                <code> header, footer and article </code>are all considered semantic because they
+                                accurately describe the purpose of the element and the type of content that is inside
+                                them.
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
+        </section>
+
+        <!-- Logo Contribution -->
+        <section class="my-5 d-none d-sm-block d-sm-none d-md-block d-md-none d-lg-block mb-lg-5 pb-lg-4 pt-lg-4">
+            <div class="container">
+                <h1 class="text-center fs-1 fw-bold mb-lg-5">Trusted by over 800+ companies</h1>
+                <div class="d-lg-flex flex-lg-row justify-content-lg-between align-items-center gap-lg-5 mb-lg-5">
+                    <div>
+                        <img src="images/company/company-1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/company/company-2.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/company/company-3.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/company/company-4.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/company/company-5.png" alt="">
+                    </div>
+                    <div>
+                        <img src="images/company/company-6.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
     </main>
