--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="container mt-lg-2">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                    <a class="navbar-brand fs-2 fw-bold text-black-50 " href="#">Pathshala</a>
+                    <a class="navbar-brand fs-2 fw-bold text-black-50 " href="#">PATHSHALA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -58,27 +58,27 @@
             </nav>
         </section>
 
-        <section class="container my-5 ">
+        <section class="container mb-5 mt-4 ">
 
             <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid  " alt="...">
+                        <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid rounded-3  " alt="...">
 
-                        <div class="carousel-caption g-5 mb-5 pb-5 ">
-                            <h1 class="fw-bold fs-1">Get Started Digital</h1>
-                            <h1 class="fw-bold fs-1">Learning</h1>
+                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 g-2  ">
+                            <h1 class="fw-bold fs-2" style="min-width: 230px;">Get Started Digital</h1>
+                            <h1 class="fw-bold fs-2">Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the readable
                                 content of a page when looking at its layout.</p>
-                            <div><button type="button" class="btn btn-info px-4 text-white fw-semibold">Get
+                            <div><button type="button" class="btn btn-info px-lg-4 px-2 text-white fw-semibold">Get
                                     Started</button>
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item rounded-2">
-                        <img src="images/cover/cover-2.png" class="d-block w-100 img-fluid " alt="...">
-                        <div class="carousel-caption hello g-5">
+                    <div class="carousel-item ">
+                        <img src="images/cover/cover-2.png" class="d-block w-100 img-fluid rounded-3 " alt="...">
+                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 ">
                             <h1 class="fw-bold fs-1">Get Started Digital</h1>
                             <h1 class="fw-bold fs-1">Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the readable
@@ -89,8 +89,8 @@
                         </div>
                     </div>
                     <div class="carousel-item ">
-                        <img src="images/cover/cover-3.png" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption g-5">
+                        <img src="images/cover/cover-3.png" class="d-block w-100 img-fluid rounded-3" alt="...">
+                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 ">
                             <h1 class="fw-bold fs-1">Get Started Digital</h1>
                             <h1 class="fw-bold fs-1">Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the readable
@@ -339,8 +339,8 @@
             </div>
             <div class="container " style="max-width: 872px;">
                 <!-- Accordion -->
-                <div class="accordion " id="accordionPanelsStayOpenExample">
-                    <div class="accordion-item ">
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                             <button class="accordion-button " type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
