--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 
     <header>
 
-        <section class="container mt-lg-2">
-            <nav class="navbar navbar-expand-lg ">
+        <section class="container mt-2">
+            <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand fs-2 fw-bold text-black-50 " href="#">PATHSHALA</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse " id="navbarScroll">
-                        <ul class="navbar-nav me-auto my-2 my-lg-0 gap-lg-4 navbar-nav-scroll collapse navbar-collapse justify-content-center"
-                            style="--bs-scroll-height: 100px;">
+                    <div class="collapse navbar-collapse " id="navbarText">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item ">
                                 <a class="nav-link" aria-current="page" href="#">Home</a>
                             </li>
@@ -34,7 +32,7 @@
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Register</a>
+                                <a class="nav-link" href="#">Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Resouces</a>
@@ -46,16 +44,15 @@
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
 
-
                         </ul>
                         <form class="d-flex" role="search">
 
-                            <button type="button"
-                                class="btn btn-outline-primary px-4 py-2 fw-bold d-none d-sm-block ">Sign Up</button>
+                            <button class="btn btn-outline-primary px-4 py-2 fw-bold" type="submit">Register</button>
                         </form>
                     </div>
                 </div>
             </nav>
+
         </section>
 
         <section class="container mb-5 mt-4 ">
