--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <section class="container mt-2">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand fs-2 fw-bold text-black-50 " href="#">PATHSHALA</a>
+                    <a class="navbar-brand spacers fs-2 fw-bold text-black-50 " href="#">PATHSHALA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse " id="navbarText">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0 gap-4">
                             <li class="nav-item ">
                                 <a class="nav-link" aria-current="page" href="#">Home</a>
                             </li>
@@ -63,19 +63,22 @@
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid rounded-3  " alt="...">
 
-                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 g-2  ">
+                        <div
+                            class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 g-2 d-flex flex-column justify-content-center align-items-center ">
                             <h1 class="fw-bold fs-2" style="min-width: 230px;">Get Started Digital</h1>
-                            <h1 class="fw-bold fs-2">Learning</h1>
-                            <p class="">It is a long established fact that a reader will be distracted by the readable
+                            <h1 class="fw-bold fs-2" style="min-width: 230px;"> Learning </h1>
+                            <p class="pera">It is a long established fact that a reader will be distracted by the
+                                readable
                                 content of a page when looking at its layout.</p>
-                            <div><button type="button" class="btn btn-info px-lg-4 px-2 text-white fw-semibold">Get
+                            <div><button type=" button" class="btn btn-info px-lg-4 px-2 text-white fw-semibold">Get
                                     Started</button>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item ">
                         <img src="images/cover/cover-2.png" class="d-block w-100 img-fluid rounded-3 " alt="...">
-                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 ">
+                        <div
+                            class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 g-2 d-flex flex-column justify-content-center align-items-center">
                             <h1 class="fw-bold fs-1">Get Started Digital</h1>
                             <h1 class="fw-bold fs-1">Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the readable
@@ -87,12 +90,14 @@
                     </div>
                     <div class="carousel-item ">
                         <img src="images/cover/cover-3.png" class="d-block w-100 img-fluid rounded-3" alt="...">
-                        <div class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 ">
+                        <div
+                            class="carousel-caption g-lg-5 mb-lg-5 pb-lg-5 g-2 d-flex flex-column justify-content-center align-items-center">
                             <h1 class="fw-bold fs-1">Get Started Digital</h1>
                             <h1 class="fw-bold fs-1">Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the readable
                                 content of a page when looking at its layout.</p>
-                            <div><button type="button" class="btn btn-info px-4 text-white fw-semibold">Get
+                            <div class="mt-5">
+                                <button type="button" class="btn btn-info px-4 text-white fw-semibold ">Get
                                     Started</button>
                             </div>
                         </div>
