--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/b526e10dd7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style1.css">
+    <link rel="shortcut icon" href="weblogo.png" type="image/x-icon">
     <title>Pathshala</title>
 </head>
 
 <body>
 
     <header>
-
+        <!-- NAVBAR -->
         <section class="container mt-2">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -54,7 +55,7 @@
             </nav>
 
         </section>
-
+        <!-- Carousel CREATE -->
         <section class="container mb-5 mt-4 ">
 
             <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="false">
@@ -117,7 +118,7 @@
             </div>
 
         </section>
-
+        <!-- Courses Prices -->
         <section class=" my-5">
             <div class="container d-flex flex-column justify-content-center align-items-center">
                 <div>
@@ -135,6 +136,7 @@
         </section>
     </header>
     <main>
+        <!-- Modal Part -->
         <section class="container">
 
             <div class="row">
@@ -483,10 +485,6 @@
             </div>
         </section>
     </footer>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
